Added 06 exercises and cart quantity

--- a/06-boolean-if-else.html
+++ b/06-boolean-if-else.html
@@ -45,7 +45,7 @@
 
     console.log('------------------------------------');
     // Will Run the code
-    if (false) {
+    if (true) {
       console.log('Hello World');
     } else {
       console.log('else');
@@ -166,7 +166,7 @@
     console.log('-----Shortcuts for If-Statement-----');
     /****************Shortcuts for If-Statementse*****************/
 
-    // Ternary Operator
+    // Ternary Operator ?:
 
     //  - similar to if-statement
     //  - first value is the condition. If it is truthy, the result is the value after the question mark.
@@ -245,17 +245,11 @@
         
     */          
 
-    //  left side is truthy
+    //  left side is falsy
     //  does not stop early or short circuit
     //  will continue and the result is the value on the right (USD)
     const currencies = undefined || 'USD';
     console.log(currencies);
-
-    
-
-
-
-
   </script>
   
 </body>
