--- a/08-object.html
+++ b/08-object.html
@@ -89,7 +89,7 @@
       
       const product3 = {
         name: 'basketball',
-        rating: {
+        rating: { //object inside an object
           stars: 4.5,
           count: 87
         },
@@ -184,7 +184,7 @@
       //  -   if we have a really big object, it is not good to copy the enire object over and over again.
       //  -   that is why js just copy the refence which is much faster and it is called "Copy by Reference"
 
-      const object1 = { //object1 is a reference; the ovject is somewhere else in the computer's memory
+      const object1 = { //object1 is a reference; the object is somewhere else in the computer's memory
         message: 'hello'  //  the object
       };
 
