Modified 08 calculator, object, and rps game

--- a/08-calculator-project.html
+++ b/08-calculator-project.html
@@ -91,7 +91,7 @@
   ">Clear</button>
   
   <script>
-    let calculation = localStorage.getItem('calculation') || '';
+    let calculation = localStorage.getItem('calculation') || '';  //  Default Operator
       
     function updateCalculation(stringNum){
       
