--- a/08-rock-paper-scissors-project.html
+++ b/08-rock-paper-scissors-project.html
@@ -37,6 +37,12 @@
       localStorage.removeItem('score');
       
     ">Reset button</button>
+
+    <button onclick="
+      alert(`Current Score
+      
+Wins: ${score.wins} | Losses: ${score.losses} | Tie: ${score.tie}`);
+    ">Show Score</button>
   
     <!---------------------JAVASCRIPT---------------->
     <script>
