Modified 09 dom projects, exercise, and quantity

--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -60,7 +60,7 @@
       
         //  if the variable = to the text inside of the button. We will change its innerHTML to Subscribed.
         /*
-          f(subscribeElem.innerHTML === 'Subscribe'){
+          if(subscribeElem.innerHTML === 'Subscribe'){
             subscribeElem.innerHTML = 'Subscribed';
           } else {
             //  Otherwise, lets change it back to Subscribe
