--- a/09-exercise.html
+++ b/09-exercise.html
@@ -15,7 +15,7 @@
       document.querySelector('.js-result')
       .innerHTML = 'You chose: tails';
     ">tails</button>
-    <p class="js-result"></p>
+    <p class="js-result"></p><br>
 
     <!---------------- Exercise 9 d,e,f ------------------------->
     <input type="text" class="js-input" placeholder="Type your name" onkeydown="
