Modified 10 shipping calculator

--- a/10-shipping-exercises.html
+++ b/10-shipping-exercises.html
@@ -94,7 +94,7 @@
       if(cost <0){
         document.querySelector('.js-error')
           .innerHTML = 'Error';
-          return;
+          return; //stops the code early to avoid running the code below
       }
 
       //  checks if the amount is less than $40, we will add $10
