Modified 11 todo list

--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -59,7 +59,7 @@
 
         for(let i = 0; i < todoList.length; i++){ // Loop through each index of the array
           const todo = todoList[i]; //  get the string to each index
-          const html = `<p>${todo}</p>`;  //  for each todo, we create html code  
+          const html = `<p>${todo}</p>`;  //  for each todo, we create/generate html code  
           todoResultHTML += html; //  using accumulator pattern to combine all html code and put it on the web page
         }
         //console.log(todoResultHTML);
