Modified 11 arrays and loops

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -157,7 +157,7 @@
       
       for(let i = 0; i < nums2.length; i++){
         const num2 = nums2[i];
-        result2.push(num2 * 2);  //  push() to add a value in the array
+        result2.push(num2 * 2);  //  push() to add a value (doubled value) in the array
         
       }
       console.log(result2); // display doubled value
