--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -51,7 +51,7 @@
       //  - Create some HTMl code for each todo
       //  - Put the HTML on the web page using dom
 
-      const todoList = [];  
+      const todoList = []; // store the result
 
       renderTodoList(); //  call this function
 
