--- a/11-exercises-1.html
+++ b/11-exercises-1.html
@@ -87,6 +87,8 @@
       console.log(addNum([1,2,3],3));
       console.log(addNum([-2,-1,0,99],2));
 
+      /////////////////////////////////////////////
+
       function addArrays(array1, array2){
         const result = [];
         for(let i = 0; i < array1.length; i++){
@@ -96,6 +98,9 @@
         return result;
       }
       console.log(addArrays([1,1,2], [1,1,3]));
+      console.log(addArrays([1,2,3], [4,5,6]));
+
+      /////////////////////////////////////////////
 
       function countPositive(nums){
         let result = [];
@@ -186,7 +191,7 @@
 
 
       function countWords(words) {
-        const result = {};
+        const result = {}; // to return an object not an array
 
         for (let i = 0; i < words.length; i++) {
           const word = words[i];
@@ -203,7 +208,7 @@
           }
         }
 
-        return result;
+        return result;  // returns an object
       }
 
       console.log(countWords(['apple', 'grape', 'apple', 'apple', 'banana']));
