--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>11 - Todo List</title>
+    <title>11 - Todo List Part 1</title>
   </head>
   <body>
 
