Modified 12 with eventlisterner

--- a/12-rock-paper-scissors-project.html
+++ b/12-rock-paper-scissors-project.html
@@ -12,21 +12,13 @@
     <p class="css-title">Rock Paper Scissors Game</p>
 
     <!---------------------Rock Button----------------->
-    <button class="css-emoji-button" onclick="
-      playGame('rock');
-    "><img class="css-rock-emoji" src="10-image/rock-emoji.png" alt=""></button>
+    <button class="css-emoji-button js-rock-button"><img class="css-rock-emoji" src="10-image/rock-emoji.png" alt=""></button>
 
     <!----------------------Paper Button------------------>
-    <button class="css-emoji-button" onclick="
-      playGame('paper');
-    "><img class="css-paper-emoji" src="10-image/paper-emoji.png" alt=""></button>
+    <button class="css-emoji-button js-paper-button"><img class="css-paper-emoji" src="10-image/paper-emoji.png" alt=""></button>
       
     <!---------------------Scissors Button---------------->
-    <button class="css-emoji-button" onclick="
-      //  This will save scissors into playerMove
-      //  We can use playerMove just like a variable
-      playGame('scissors');
-    "><img class="css-scissors-emoji" src="10-image/scissors-emoji.png" alt=""></button>
+    <button class="css-emoji-button js-scissors-button"><img class="css-scissors-emoji" src="10-image/scissors-emoji.png" alt=""></button>
 
     <!---------------------Scores---------------->
     <p class="js-result css-result"></p>
