--- a/12-todo-list-part-2.html
+++ b/12-todo-list-part-2.html
@@ -95,7 +95,7 @@
         let todoResultHTML = '';  //  store the result or the html here
 
         //  loop through the array using foreach
-        todoList.forEach(function(todoObject, index){
+        todoList.forEach((todoObject, index) =>{  //  passing function into another function
           //  first parameter will contain each value in the array (todoObject)
           //  second parameter is the index
 
